# ai-play-retro

./: README.md
backend/: README.md  config.py  main.py  pyproject.toml  train.py
backend/ais/abel/: abel.py  tansformer_agent.py  train.py
backend/ais/kane/: actions.py  game_area.py  kane.py  vision.py  worker_factory.py
backend/ais/kane/worker/: battlecity_nes.py
backend/ais/kane/worker/BattleCity_Nes/: actions.py  elements.py
backend/assets/BattleCity-Nes/: elements.json  elements.py
backend/assets/BattleCity_Nes/: elements.py
backend/models/: api.py
backend/runs/Mar10_22-10-58_miaomiao/: events.out.tfevents.1710079858.miaomiao.28102.0
backend/runs/Mar10_22-17-54_miaomiao/: events.out.tfevents.1710080274.miaomiao.29323.0
backend/services/: retro_manager.py
backend/tests/: dev.ipynb
backend/utils/: color.py  graph.py
backend/vision/: astar_graph.py  element_recognition.py  frame_process.py  node.py  spatial_hash_table.py
frontend/: package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/components/: GameList.tsx
frontend/app/interfaces/: Game.ts
frontend/public/: Battle_city_logos.svg:Zone.Identifier
